# cloude-storage

./: .gitignore
data/system/system/wal/: db.wal
database-project/: package-lock.json  package.json  sweep_results.txt
database-project/backend/: engineClient.js  index.js
database-project/backend/config/: db.js  dbmanager.js  jwtConfig.js  logsDB.js  session.js
database-project/backend/controller/: authController.js  databasecontroller.js  publicController.js
database-project/backend/data/: users.json
database-project/backend/data/databases/ac9d744f6416f7f21ed20d40/users-db/: registred-users.json
database-project/backend/data/databases/bd56f4b5b6b700d682eb6741/users-db/: registred-users.json
database-project/backend/data/databases/c324668de7161763c91767e6/users-db/: registred-users.json
database-project/backend/engine/: CMakeLists.txt
database-project/backend/engine/include/: database_engine.hpp  index.hpp  logger.hpp  lsm.hpp  query.hpp  server.hpp  storage.hpp  transaction.hpp  transaction_manager.hpp  update_ops.hpp  wal.hpp
database-project/backend/engine/src/: database_engine.cpp  index.cpp  logger.cpp  lsm.cpp  main.cpp  query_parser.cpp  server.cpp  storage.cpp  test.cpp  transaction_manager.cpp  wal.cpp
database-project/backend/engine/test/: .gitignore  test.cpp
database-project/backend/env/: .env
database-project/backend/middleware/: authMiddleware.js  roleMiddleware.js
database-project/backend/router/: databaseRoutes.js  publicRoutes.js  userrouter.js
database-project/backend/tools/: bulk_test.js  bulk_test_fixed.js  replay_wal.js  sweep_runner.js  test_ping.js  vector_demo.js
database-project/backend/utilites/: generatId.js  sendmails.js
database-project/data/databases/test-user-123/users-db/wal/: db.wal
database-project/db/: CMakeLists.txt
database-project/db/src/: db.cpp  main.cpp  wal.cpp
